style: Adjust layout to use min-height for fluidity and avoid scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 html, body, #__next {
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
